[workspace]
members = [
    "claw_net",
    "claw_layout",
    "claw_ui",
]
resolver = "2"

[package]
name = "claw_browser"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "claw_browser"
path = "src/main.rs"

[dependencies]
claw_net = { path = "claw_net" }
claw_layout = { path = "claw_layout" }
claw_ui = { path = "claw_ui" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
url = "2.4"
